<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <ImageView
                android:id="@+id/banner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/xml1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_weight="2" />

            <TextView
                android:id="@+id/dentistName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/dr_oleg_miami"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textSize="32sp"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/photoDentist"
                app:layout_constraintTop_toBottomOf="@+id/banner" />

            <ImageView
                android:id="@+id/photoDentist"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:src="@drawable/xml2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/banner" />

            <TextView
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/dental_surgeon"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/photoDentist"
                app:layout_constraintTop_toBottomOf="@+id/dentistName" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/your_friendly_dental_friend"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/photoDentist"
                app:layout_constraintTop_toBottomOf="@+id/info" />

            <Button
                android:id="@+id/callBtnFirstScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:drawableLeft="@android:drawable/stat_sys_phone_call"
                android:text="@string/make_an_appointment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/emailBtnFirstScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="8dp"
                android:text="@string/oleg_mayami93_gmail_com"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:drawableLeftCompat="@android:drawable/sym_action_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/callBtnFirstScreen" />

            <TextView
                android:id="@+id/siteFirstScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="8dp"
                android:text="@string/www_dental_com"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:drawableStartCompat="@android:drawable/ic_menu_mapmode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailBtnFirstScreen" />

            <TextView
                android:id="@+id/whatsappFirstScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="8dp"
                android:text="@string/whatsapp_me"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:drawableStartCompat="@android:drawable/sym_action_chat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/siteFirstScreen" />

            <TextView
                android:id="@+id/saveToPhoneBookFirstScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="8dp"
                android:text="@string/save_to_phonebook"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:drawableStartCompat="@android:drawable/ic_menu_save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/whatsappFirstScreen" />

            <TextView
                android:id="@+id/locatoinFirstScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="8dp"
                android:text="@string/abdumomunova_16"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:drawableStartCompat="@android:drawable/ic_dialog_map"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saveToPhoneBookFirstScreen" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>